live agora changelog
--

2024.05.22
- add open.taat.live/agora landing dialog

2024.05.16
- add configurable edit-mode password (set in backstage)

2024.05.13
- add css skew control to node toolbar (image, video, sounds and their metadata skew accordingly)

2024.05.12
- hide zoom buttons by default, add toggle to space settings
- update branding
- remove drop shadow around controls

2024.05.10
- add community version
- add attribution dialog
- update space settings: add 'hide attribution' toggle

2024.05.06
- finite canvas size
- blend nodes with background
- add space settings (visible in edit mode)
  - space name
  - background color
  - blend with background
  - canvas size

2024.04.23
- feature: added css blend mode control to node toolbar
- feature: added z index control to node toolbar

2024.04.22
- feature: support diverse sound file types: embedded ffmpeg transcodes to mp3 before upload
- add changelog